# Simple-Deep-Agent-Test

./: .env.example  .gitignore  README.md  __init__.py  agent.py  analyze.py  chainlit_app.py  debug.py  deep_agent.py  example.py  pyproject.toml  requirements.txt
.claude/agents/: graph-builder.md  langchain-architect.md  test-writer.md  tool-builder.md  ui-integrator.md
.claude/skills/deep-agent-dev/: SKILL.md
tests/: test_agent.py
